--- a/css/AddProductPage.css
+++ b/css/AddProductPage.css
@@ -74,8 +74,31 @@
   border: 2px solid black;
 }
 
-  @media   (max-width: 768px) {
+  @media   (max-width: 820px) {
    #product-detail{
     flex-wrap: wrap;
+    margin: 1rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
    } 
+   .product-info{
+    width: 90svw;
+  height: 50svh;
+   }
+   .cartTab{
+    width: 100vw;
+    right: -130%;
+    
+}
+
+.listCart .item{
+  display: grid;
+text-align: center;
+align-items: center;
+gap:5px;
+    grid-template-columns: 55px 100px 45px 1fr;
+   
+}
+
   }
